data/rq1/k1/rust_code/final_projects/host__25c1898e1626/translate_by_qwen3_coder/preprocessed_header.h

typedef unsigned int size_t;
typedef signed int int32_t;
typedef unsigned int uint32_t;
size_t strlen (const char *);
struct HdfObject {
    int32_t objectId;
};
typedef unsigned int UINT32;
typedef UINT32 size_t;
struct DeviceResourceAttr {
    const char *name;
    const char *value;
    struct DeviceResourceAttr *next;
};
struct DeviceResourceNode {
    const char *name;
    uint32_t hashValue;
    struct DeviceResourceAttr *attrData;
    struct DeviceResourceNode *parent;
    struct DeviceResourceNode *child;
    struct DeviceResourceNode *sibling;
};
const struct DeviceResourceNode *HcsGetNodeByMatchAttr(const struct DeviceResourceNode *node, const char *attrValue);
const struct DeviceResourceNode *HdfGetHcsRootNode(void);
char *HdfStringCopy(const char *src);
struct HdfObject *HdfObjectManagerGetObject(int objectId);
void HdfObjectManagerFreeObject(struct HdfObject *object);
typedef enum {
    LOG_TYPE_MIN = 0,
    LOG_INIT = 1,
    LOG_CORE = 3,
    LOG_TYPE_MAX
} LogType;
typedef enum {
    LOG_DEBUG = 3,
    LOG_INFO = 4,
    LOG_WARN = 5,
    LOG_ERROR = 6,
    LOG_FATAL = 7,
} LogLevel;
int HiLogPrint(LogType type, LogLevel level, unsigned int domain, const char* tag, const char* fmt, ...)
    __attribute__((format(os_log, 5, 6)));
void OsalMemFree(void *mem);