data/paper_artifacts/deepseek_v4_pro_ohos10_0613_harness_fixed_v2/projects/host__25c1898e1626/.c2r_bindgen_extern/hdf_device_node_e2355f5f.externs.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub type size_t = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn strlen(arg1: *const ::core::ffi::c_char) -> size_t;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct HdfObject {
    pub objectId: i32,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct pthread_rwlock_t {
    pub __u: pthread_rwlock_t__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union pthread_rwlock_t__bindgen_ty_1 {
    pub __i: [::core::ffi::c_int; 14usize],
    pub __vi: [::core::ffi::c_int; 14usize],
    pub __p: [*mut ::core::ffi::c_void; 7usize],
}
unsafe extern "C" {
    pub fn pthread_rwlock_wrlock(arg1: *mut pthread_rwlock_t) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn pthread_rwlock_unlock(arg1: *mut pthread_rwlock_t) -> ::core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DeviceResourceAttr {
    pub name: *const ::core::ffi::c_char,
    pub value: *const ::core::ffi::c_char,
    pub next: *mut DeviceResourceAttr,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DeviceResourceNode {
    pub name: *const ::core::ffi::c_char,
    pub hashValue: u32,
    pub attrData: *mut DeviceResourceAttr,
    pub parent: *mut DeviceResourceNode,
    pub child: *mut DeviceResourceNode,
    pub sibling: *mut DeviceResourceNode,
}
unsafe extern "C" {
    pub fn HcsGetNodeByMatchAttr(
        node: *const DeviceResourceNode,
        attrValue: *const ::core::ffi::c_char,
    ) -> *const DeviceResourceNode;
}
unsafe extern "C" {
    pub fn HdfGetHcsRootNode() -> *const DeviceResourceNode;
}
unsafe extern "C" {
    pub fn HdfStringCopy(src: *const ::core::ffi::c_char) -> *mut ::core::ffi::c_char;
}
pub const LOG_TYPE_MIN: LogType = 0;
pub const LOG_APP: LogType = 0;
pub const LOG_INIT: LogType = 1;
pub const LOG_CORE: LogType = 3;
pub const LOG_KMSG: LogType = 4;
pub const LOG_ONLY_PRERELEASE: LogType = 5;
pub const LOG_TYPE_MAX: LogType = 6;
pub type LogType = ::core::ffi::c_uint;
pub const LOG_LEVEL_MIN: LogLevel = 0;
pub const LOG_DEBUG: LogLevel = 3;
pub const LOG_INFO: LogLevel = 4;
pub const LOG_WARN: LogLevel = 5;
pub const LOG_ERROR: LogLevel = 6;
pub const LOG_FATAL: LogLevel = 7;
pub const LOG_LEVEL_MAX: LogLevel = 8;
pub type LogLevel = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn HiLogPrint(
        type_: LogType,
        level: LogLevel,
        domain: ::core::ffi::c_uint,
        tag: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn HdfObjectManagerGetObject(objectId: ::core::ffi::c_int) -> *mut HdfObject;
}
unsafe extern "C" {
    pub fn HdfObjectManagerFreeObject(object: *mut HdfObject);
}
unsafe extern "C" {
    pub fn OsalMemFree(mem: *mut ::core::ffi::c_void);
}
